--- a/week7.css
+++ b/week7.css
@@ -1,3 +1,12 @@
+a{
+	color: black;
+	text-decoration: none;
+}
+
+a:hover{
+	color: lightblue;	
+}
+
 body{
 	font-size: 14px;
 	line-height: 20px;
@@ -47,6 +56,21 @@ nav ul li{
 	grid-column: 1;
 	text-align: left;
 	margin: 0 auto;
+}
+
+.slider img{
+	width: 305px;
+	height: 150px;
+}
+
+.slider2 img{
+	width: 305px;
+	height: 150px;
+}
+
+.slider3 img{
+	width: 305px;
+	height: 150px;
 }
 
 .slider2{
